<?xml version="1.0" encoding="UTF-8"?>
<!-- Parent pom for Stripes project. We use multi-module project in order to avoid directory refactorings and thereby breaking of the currently used and build. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>
	<groupId>net.sourceforge.stripes</groupId>
	<artifactId>stripes-parent</artifactId>
	<version>2.0.0-EAP-1</version>
	<packaging>pom</packaging>

	<modules>
		<module>stripes</module>
		<module>examples</module>
		<module>dist</module>
	</modules>

	<name>Stripes Parent</name>
	<url>http://stripesframework.org/</url>
	<description>Stripes web framework parent project.</description>

	<organization>
		<name>Stripes Framework</name>
		<url>http://www.stripesframework.org/</url>
	</organization>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<url>https://github.com/StripesFramework/stripes</url>
		<connection>scm:git:https://github.com/StripesFramework/stripes.git</connection>
		<developerConnection>scm:git:https://github.com/StripesFramework/stripes.git</developerConnection>
	</scm>

	<issueManagement>
		<system>JIRA</system>
		<url>http://stripesframework.org/jira/browse/STS</url>
	</issueManagement>

	<ciManagement>
		<system>Jenkins</system>
		<url>http://www.stripesframework.org/jenkins</url>
	</ciManagement>

	<properties>
		<spring.version>5.0.8.RELEASE</spring.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>3.1.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.servlet.jsp</groupId>
				<artifactId>jsp-api</artifactId>
				<version>2.2</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.el</groupId>
				<artifactId>el-api</artifactId>
				<version>2.2</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>jstl</artifactId>
				<version>1.2</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>taglibs</groupId>
				<artifactId>standard</artifactId>
				<version>1.1.2</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>javax.mail</groupId>
				<artifactId>mail</artifactId>
				<version>1.4.7</version>
				<scope>provided</scope>
				<optional>true</optional>
				<exclusions>
					<exclusion>
						<groupId>javax.activation</groupId>
						<artifactId>activation</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>6.8.8</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
				<version>1.1.3</version>
				<exclusions>
					<exclusion>
						<groupId>javax.servlet</groupId>
						<artifactId>servlet-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>log4j</groupId>
						<artifactId>log4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>logkit</groupId>
						<artifactId>logkit</artifactId>
					</exclusion>
					<exclusion>
						<groupId>avalon-framework</groupId>
						<artifactId>avalon-framework</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.17</version>
				<!-- define those exlusions otherwise we get annoying zip corruption errors -->
				<exclusions>
					<exclusion>
						<artifactId>jms</artifactId>
						<groupId>javax.jms</groupId>
					</exclusion>
					<exclusion>
						<artifactId>jmxtools</artifactId>
						<groupId>com.sun.jdmk</groupId>
					</exclusion>
					<exclusion>
						<artifactId>jmxri</artifactId>
						<groupId>com.sun.jmx</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
				<scope>provided</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.version}</version>
				<scope>provided</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>servlets.com</groupId>
				<artifactId>cos</artifactId>
				<version>05Nov2002</version>
				<scope>provided</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>1.3.1</version>
				<scope>provided</scope>
				<optional>true</optional>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
					<configuration>
						<source>11</source>
						<target>11</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>net.sourceforge.maven-taglib</groupId>
					<artifactId>maven-taglib-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.1.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.4</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.tomcat.maven</groupId>
					<artifactId>tomcat7-maven-plugin</artifactId>
					<version>2.2</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.gmaven</groupId>
					<artifactId>gmaven-plugin</artifactId>
					<version>1.5</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.cargo</groupId>
					<artifactId>cargo-maven2-plugin</artifactId>
					<version>1.4.7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.2.0</version>
					<executions>
						<execution>
							<id>generate-javadoc</id>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<overview>${basedir}/src/main/resources/overview.html</overview>
								<bottom>© Copyright 2005-2014, Stripes Development Team.</bottom>
								<author>true</author>
								<use>true</use>
								<version>true</version>
								<doclint>none</doclint>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>cobertura-maven-plugin</artifactId>
					<version>2.6</version>
					<configuration>
						<formats>
							<format>html</format>
							<format>xml</format>
						</formats>
						<check/>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>webtests</id>
			<modules>
				<module>webtests</module>
			</modules>
		</profile>
	</profiles>
</project>
